# ultra-streamer-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md
.github/: copilot-instructions.md
client/: index.html
crates/ustreamer-app/: Cargo.toml
crates/ustreamer-app/src/: lib.rs
crates/ustreamer-capture/: Cargo.toml
crates/ustreamer-capture/src/: lib.rs  metal.rs  staging.rs  vulkan_external.rs
crates/ustreamer-demo/: Cargo.toml
crates/ustreamer-demo/src/: main.rs
crates/ustreamer-encode/: Cargo.toml
crates/ustreamer-encode/src/: amf.rs  gstreamer.rs  hevc.rs  lib.rs  nvenc.rs  videotoolbox.rs
crates/ustreamer-input/: Cargo.toml
crates/ustreamer-input/src/: lib.rs
crates/ustreamer-nvenc-probe/: Cargo.toml
crates/ustreamer-nvenc-probe/src/: main.rs
crates/ustreamer-proto/: Cargo.toml
crates/ustreamer-proto/src/: control.rs  frame.rs  input.rs  lib.rs  quality.rs
crates/ustreamer-quality/: Cargo.toml
crates/ustreamer-quality/src/: lib.rs
crates/ustreamer-transport/: Cargo.toml
crates/ustreamer-transport/src/: lib.rs  session.rs  websocket.rs
scripts/: publish-crates.sh
