[package]
name = "ustreamer-app"
description = "Integration traits and helpers for wiring wgpu apps into ultra-streamer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ustreamer-app"
readme = "../../README.md"
keywords = ["streaming", "integration", "input", "wgpu", "browser"]

[dependencies]
wgpu = { workspace = true }
ustreamer-input = { workspace = true }
ustreamer-proto = { workspace = true }
ustreamer-quality = { workspace = true }
