[package]
name = "ustreamer-demo"
description = "Headless live-test demo for ultra-streamer-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[features]
default = []
gstreamer-fallback = ["ustreamer-encode/gstreamer-fallback"]
nvenc-direct = ["ustreamer-capture/vulkan-external", "ustreamer-encode/nvenc-direct"]

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wgpu = { workspace = true }
ustreamer-app = { workspace = true }
ustreamer-capture = { workspace = true }
ustreamer-encode = { workspace = true }
ustreamer-input = { workspace = true }
ustreamer-proto = { workspace = true }
ustreamer-quality = { workspace = true }
ustreamer-transport = { workspace = true }
