[package]
name = "ustreamer-proto"
description = "Shared protocol types for ultra-streamer: frame packets, input events, quality parameters"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
