[package]
name = "ustreamer-proto"
description = "Shared protocol types for ultra-streamer: frame packets, input events, quality parameters"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.22"
bytemuck = { workspace = true }
bytes = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
