[package]
name = "ustreamer-proto"
description = "Shared protocol types for ultra-streamer: frame packets, input events, quality parameters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ustreamer-proto"
readme = "../../README.md"
keywords = ["streaming", "protocol", "webcodecs", "webtransport", "wgpu"]

[dependencies]
base64 = "0.22"
bytemuck = { workspace = true }
bytes = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
