[package]
name = "ustreamer-quality"
description = "Adaptive quality controller — tier switching, idle detection, lossless refinement logic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
ustreamer-proto = { workspace = true }
tracing = { workspace = true }
