[package]
name = "ustreamer-transport"
description = "WebTransport server (QUIC/HTTP3 via quinn) with WebSocket fallback"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ustreamer-transport"
readme = "../../README.md"
keywords = ["streaming", "webtransport", "websocket", "quic", "browser"]

[dependencies]
ustreamer-proto = { workspace = true }
quinn = { workspace = true }
wtransport = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures-util = "0.3"
tokio-tungstenite = "0.24"
